--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1 style="text-align: center">Coming Soon!</h1>
+<!DOCTYPE html>
+<html lang="fa">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>NovaX</title>
+        <style>
+            .comingsoon {
+                text-align: center;
+            }
+        </style>
+    </head>
+    <body>
+        <h1 class="comingsoon">Coming Soon! ...</h1>
+    </body>
+</html>
